--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "ethjs-query": "0.3.2",
     "ethjs-rpc": "0.1.8",
     "ethjs-util": "0.1.4",
-    "truffle": "4.1.11",
+    "openzeppelin-solidity": "^2.0.0-rc.1",
+    "truffle": "4.1.14",
     "truffle-hdwallet-provider": "0.0.5"
   },
   "devDependencies": {
